# telbot

./: .gitignore  pyproject.toml
telbot/: __init__.py
